<resources>
    <string name="app_name">MathForKids</string>
    <string name="question_mark">\?</string>
    <string name="welcome_title">Состав числа</string>
    <string name="game_rules">
    Правила игры: перед тобой будет пример, с ответом, но с одним пропущенным числом, которое нужно будет вставить, выбрав из предложенных вариантов
    </string>
    <string name="button_understand">Супер</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="choose_level_title">Выберите уровень:</string>
    <string name="easy_level">Легкий</string>
    <string name="normal_level">Средний</string>
    <string name="hard_level">Тяжелый</string>
    <string name="test_level">Тестовый</string>
    <string name="game_over">Game Over</string>
    <string name="retry">Попробовать снова</string>
    <string name="score_answers">Ваш счет: %d</string>
    <string name="score_percentage">Ваш процент правильных ответов: %d</string>
    <string name="right_answers">Правильных ответов %d из %d необходимых</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %d</string>
    <string name="required_score">Необходимое количество правильных ответов: %d</string>
    <string name="stat">%d / %d</string>
    <string name="progress_bar_stat">верных ответов: %d%s необходимо: %d%s </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plus">+</string>
    <string name="percent">%</string>
    <string name="invisible_num">\?</string>
</resources>