<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="gameResult"
            type="com.arziman_off.mathforkids.domain.entity.GameResult"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        tools:context=".presentation.GameResultFragment">

        <ImageView
            android:id="@+id/emoji_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="48dp"
            android:contentDescription="@string/game_over"
            app:resultEmoji="@{gameResult}"
            app:layout_constraintBottom_toTopOf="@id/tv_required_answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_win" />

        <TextView
            android:id="@+id/tv_required_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            app:requiredAnswers="@{gameResult.gameSettings.minCountOfRightAnswers}"
            app:layout_constraintBottom_toTopOf="@id/tv_score_answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/required_score"
            />

        <TextView
            android:id="@+id/tv_score_answers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:scoredAnswers="@{gameResult.countOfRightAnswers}"
            app:layout_constraintBottom_toTopOf="@id/tv_required_percentage"
            app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
            app:layout_constraintStart_toStartOf="@id/tv_required_answers"
            app:layout_constraintTop_toBottomOf="@id/tv_required_answers"
            tools:text="@string/score_answers"
            />

        <TextView
            android:id="@+id/tv_required_percentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:requiredPercentage="@{gameResult}"
            app:layout_constraintBottom_toTopOf="@id/tv_score_percentage"
            app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/tv_required_answers"
            app:layout_constraintTop_toBottomOf="@id/tv_score_answers"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/required_percentage" />

        <TextView
            android:id="@+id/tv_score_percentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:scoredPercentage="@{gameResult}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
            app:layout_constraintStart_toStartOf="@id/tv_required_answers"
            app:layout_constraintTop_toBottomOf="@id/tv_required_percentage"
            tools:text="@string/score_percentage"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_retry"
            style="@style/BtnStyle"
            android:layout_margin="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/retry"
            app:cornerRadius="16dp"

            app:iconGravity="textStart"
            app:iconPadding="16dp"
            app:iconSize="18dp"
            app:iconTint="@color/white"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>